--- a/SSS Buddy_84_6.9/SSS Buddy_84_(6.9)/VoicensapSchoolsDemo/app/src/main/res/layout/activity_pdf_viewer.xml
+++ b/SSS Buddy_84_6.9/SSS Buddy_84_(6.9)/VoicensapSchoolsDemo/app/src/main/res/layout/activity_pdf_viewer.xml
@@ -7,12 +7,12 @@
     android:layout_height="match_parent"
     tools:context=".Activity.PdfViewer">
 
-    <com.github.barteksc.pdfviewer.PDFView
-        android:id="@+id/pdfView"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@color/grey"
-        android:visibility="gone" />
+<!--    <com.github.barteksc.pdfviewer.PDFView-->
+<!--        android:id="@+id/pdfView"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="match_parent"-->
+<!--        android:background="@color/grey"-->
+<!--        android:visibility="gone" />-->
 
     <!--    <TextView-->
     <!--        android:id="@+id/textView"-->
